--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -281,6 +281,15 @@
         <GenerateDocumentationFile>false</GenerateDocumentationFile>
     </PropertyGroup>
 
+    <!-- Print version info after build for all projects -->
+    <Target Name="PrintVersion" AfterTargets="Build">
+        <Message Importance="high" Text="AssemblyVersion: $(AssemblyVersion)" />
+        <Message Importance="high" Text="FileVersion: $(FileVersion)" />
+        <Message Importance="high" Text="InformationalVersion: $(InformationalVersion)" />
+        <Message Importance="high" Text="PackageVersion: $(PackageVersion)" />
+        <Message Importance="high" Text="Version: $(Version)" />
+    </Target>
+
     <!-- Add project-specific properties and packages here -->
     <ItemGroup>
         <PackageReference Include="Newtonsoft.Json" />
