--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -26,10 +26,13 @@ on:
 env:
   BUILD_PROJECTS: >-
     ["./UlidType.slnx"]
+
   TEST_PROJECTS: >-
     ["test/UlidType.Tests/UlidType.Tests.csproj"]
+
   BENCHMARK_PROJECTS: >-
     ["benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj"]
+
   PREPROCESSOR_SYMBOLS: ""
   OS: >-
     ["ubuntu-latest"]
@@ -39,13 +42,6 @@ jobs:
     name: Finalize parameters from variables, inputs, secrets and defaults
     runs-on: ubuntu-latest # in this workflow the runner doesn't matter - we're just preparing the inputs for the next workload(s).
     if: ${{ github.event_name != 'push' || !contains(github.event.head_commit.message, '[skip ci]') }}
-    env:
-      dotnet-version: ${{ vars.DOTNET_VERSION }}
-      configuration: ${{ vars.CONFIGURATION }}
-      min-coverage-pct: ${{ vars.MIN_COVERAGE_PCT }}
-      max-regression-pct: ${{ vars.MAX_REGRESSION_PCT }}
-      minver-tag-prefix: ${{ vars.MINVERTAGPREFIX || 'v' }}
-      minver-prerelease-id: ${{ vars.MINVERDEFAULTPRERELEASEIDENTIFIERS || 'preview.0' }}
     outputs:
       build-projects: ${{ steps.init-params.outputs.build-projects }}
       test-projects: ${{ steps.init-params.outputs.test-projects }}
@@ -67,12 +63,12 @@ jobs:
           build_projects='${{ env.BUILD_PROJECTS }}'
           test_projects='${{ env.TEST_PROJECTS }}'
           benchmark_projects='${{ env.BENCHMARK_PROJECTS }}'
-          dotnet_version='${{ env.dotnet-version }}'
-          configuration='${{ env.configuration }}'
-          min_coverage_pct='${{ env.min-coverage-pct }}'
-          max_regression_pct='${{ env.max-regression-pct }}'
-          minver_tag_prefix='${{ env.minver-tag-prefix }}'
-          minver_prerelease_id='${{ env.minver-prerelease-id }}'
+          dotnet_version='${{ vars.DOTNET_VERSION }}'
+          configuration='${{ vars.CONFIGURATION }}'
+          min_coverage_pct='${{ vars.MIN_COVERAGE_PCT }}'
+          max_regression_pct='${{ vars.MAX_REGRESSION_PCT }}'
+          minver_tag_prefix='${{ vars.MINVERTAGPREFIX }}'
+          minver_prerelease_id='${{ vars.MINVERDEFAULTPRERELEASEIDENTIFIERS }}'
 
           if [ '${{ github.event_name }}' == "push" ]; then
               # Set the values for push events, and add SHORT_RUN to preprocessor_symbols for faster benchmark tests (less precise, yet acceptable for CI runs).
