fix: Update workflow input and environment variable names for consistency

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -10,8 +10,8 @@ on:
 
   workflow_dispatch:
     inputs:
-      os:
-        description: Runner OS (or multiple OS-es separate by comma, e.g. 'ubuntu-latest,windows-latest')
+      runners-os:
+        description: Runners OS (one or more runners OS-es separate by comma, e.g. 'ubuntu-latest,windows-latest')
         type: string
         default: ubuntu-latest
         # There is a known GitHub actions issue: the workflow dispatch UI doesn't properly handle JSON strings with quotes.
@@ -34,7 +34,7 @@ env:
     ["benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj"]
 
   PREPROCESSOR_SYMBOLS: ""
-  OS: >-
+  RUNNERS_OS: >-
     ["ubuntu-latest"]
 
 jobs:
@@ -46,7 +46,7 @@ jobs:
       build-projects: ${{ steps.init-params.outputs.build-projects }}
       test-projects: ${{ steps.init-params.outputs.test-projects }}
       benchmark-projects: ${{ steps.init-params.outputs.benchmark-projects }}
-      os: ${{ steps.init-params.outputs.os }}
+      runners-os: ${{ steps.init-params.outputs.runners-os }}
       dotnet-version: ${{ steps.init-params.outputs.dotnet-version }}
       configuration: ${{ steps.init-params.outputs.configuration }}
       preprocessor-symbols: ${{ steps.init-params.outputs.preprocessor-symbols }}
@@ -72,17 +72,17 @@ jobs:
 
           if [ '${{ github.event_name }}' == "push" ]; then
               # Set the values for push events, and add SHORT_RUN to preprocessor_symbols for faster benchmark tests (less precise, yet acceptable for CI runs).
-              os='${{ env.OS }}'
+              runners_os='${{ env.RUNNERS_OS }}'
               preprocessor_symbols='SHORT_RUN;${{ env.PREPROCESSOR_SYMBOLS }}'
           elif [ '${{ github.event_name }}' == "pull_request" ]; then
               # Set the values for pull_request events
-              os='${{ env.OS }}'
+              runners_os='${{ env.RUNNERS_OS }}'
               preprocessor_symbols='${{ env.PREPROCESSOR_SYMBOLS }}'
           elif [ '${{ github.event_name }}' == "workflow_dispatch" ]; then
               # Get the values from the UI inputs of workflow_dispatch event. Convert comma-separated runner's OS values to JSON array
               # There is a known GitHub actions issue: the workflow dispatch UI doesn't properly handle JSON strings with quotes.
               # E.g. for the input '["ubuntu-latest"]', the UI removes the inner quotes and it becomes the invalid JSON: '[ubuntu-latest]'.
-              os=$(echo "${{ inputs.os }}" | jq -Rc 'split(",") | map(select(length > 0) | gsub("^\\s+|\\s+$";""))')
+              runners_os=$(echo "${{ inputs.runners-os }}" | jq -Rc 'split(",") | map(select(length > 0) | gsub("^\\s+|\\s+$";""))')
               preprocessor_symbols='${{ inputs.preprocessor-symbols }}'
           else
               echo "Unsupported event: ${{ github.event_name }}"
@@ -94,7 +94,7 @@ jobs:
               echo "build-projects=${build_projects}"
               echo "test-projects=${test_projects}"
               echo "benchmark-projects=${benchmark_projects}"
-              echo "os=${os}"
+              echo "runners-os=${runners_os}"
               echo "preprocessor-symbols=${preprocessor_symbols}"
               echo "dotnet-version=${dotnet_version}"
               echo "configuration=${configuration}"
@@ -118,7 +118,7 @@ jobs:
       pull-requests: write # Required to comment on PRs
       checks: write # Required to create GitHub Checks
     with:
-      os: ${{ needs.get-params.outputs.os }}
+      runners-os: ${{ needs.get-params.outputs.runners-os }}
       dotnet-version: ${{ needs.get-params.outputs.dotnet-version }}
       configuration: ${{ needs.get-params.outputs.configuration }}
       preprocessor-symbols: ${{ needs.get-params.outputs.preprocessor-symbols }}
