--- a/.github/workflows/Release.yaml
+++ b/.github/workflows/Release.yaml
@@ -1,10 +1,6 @@
 name: Publish NuGet Stable Release
 
 on:
-  push:
-    tags:
-      - "v[0-9]*.[0-9]*.[0-9]*" # trigger on version tags like v1.2.3
-
   workflow_dispatch:
     inputs:
       reason:
@@ -27,12 +23,7 @@ jobs:
   get-params:
     name: Prepare the parameters
     runs-on: ubuntu-latest
-    if: >+
-      ${{
-      github.event_name == 'workflow_dispatch' ||
-      !contains(github.ref_name,'-') &&
-      startsWith(github.ref, format('refs/tags/%s', vars.MINVERTAGPREFIX || 'v'))
-      }}
+    if: ${{ github.event_name == 'workflow_dispatch' }}
     outputs:
       dotnet-version: ${{ steps.init-params.outputs.dotnet-version }}
       package-projects: ${{ steps.init-params.outputs.package-projects }}
