--- a/.github/workflows/Prerelease.yaml
+++ b/.github/workflows/Prerelease.yaml
@@ -21,7 +21,7 @@ on:
         type: string
 
 env:
-  PACKAGE_PROJECTS: >-
+  PACKAGE_PROJECTS: >
     [
     "src/Ulid/Ulid.csproj"
     ]
@@ -30,6 +30,12 @@ env:
 
   # Ensure the NUGET_API_*KEY secret below corresponds to the server selected here.
   NUGET_SERVER: ${{ vars.NUGET_SERVER || 'github' }}
+
+  CONFIGURATION: ${{ vars.CONFIGURATION || Release }} # The build configuration: Debug, Release, etc.
+  DOTNET_VERSION: ${{ vars.DOTNET_VERSION || 10.0.x }} # The .NET SDK version to use.
+  MINVERTAGPREFIX: ${{ vars.MINVERTAGPREFIX || "v" }} # The MinVer tag prefix.
+  MINVERDEFAULTPRERELEASEIDENTIFIERS: ${{ vars.MINVERDEFAULTPRERELEASEIDENTIFIERS || "preview.0" }} # The MinVer default pre-release identifiers.
+  VERBOSE: ${{ vars.VERBOSE || "false" }} # Set to "true" to enable verbose logging in scripts.
 
 jobs:
   get-params:
@@ -50,14 +56,14 @@ jobs:
         id: init-params
         shell: bash
         run: |
-          dotnet_version='${{ vars.DOTNET_VERSION }}'
+          dotnet_version='${{ env.DOTNET_VERSION }}'
           package_projects='${{ env.PACKAGE_PROJECTS }}'
           preprocessor_symbols='${{ env.PREPROCESSOR_SYMBOLS }}'
-          minver_tag_prefix='${{ vars.MINVERTAGPREFIX || 'v' }}'
-          minver_prerelease_id='${{ vars.MINVERDEFAULTPRERELEASEIDENTIFIERS || 'preview.0' }}'
-          reason="Pre-release (PR approved to merge into main, automatically tagged with a pre-release tag)"
+          minver_tag_prefix='${{ env.MINVERTAGPREFIX || 'v' }}'
+          minver_prerelease_id='${{ env.MINVERDEFAULTPRERELEASEIDENTIFIERS || 'preview.0' }}'
           nuget_server='${{ env.NUGET_SERVER }}'
-          save_package_artifacts='${{ vars.SAVE_PACKAGE_ARTIFACTS || 'false' }}'
+          save_package_artifacts='${{ env.SAVE_PACKAGE_ARTIFACTS || 'false' }}'
+          reason="Pre-release (PR approved to merge into main, automatically tagged with a pre-release tag)"
 
           if [ '${{ github.event_name }}' == "workflow_dispatch" ]; then
               minver_prerelease_id='${{ inputs.minver-prerelease-id }}'
