--- a/.github/workflows/Release.yaml
+++ b/.github/workflows/Release.yaml
@@ -14,16 +14,13 @@ env:
     "src/Ulid/Ulid.csproj"
     ]
 
-  PREPROCESSOR_SYMBOLS: ""
-
-  # Ensure the NUGET_API_*KEY secret below corresponds to the server selected here.
-  NUGET_SERVER: ${{ vars.NUGET_SERVER || 'github' }}
-
-  CONFIGURATION: ${{ vars.CONFIGURATION || Release }} # The build configuration: Debug, Release, etc.
-  DOTNET_VERSION: ${{ vars.DOTNET_VERSION || 10.0.x }} # The .NET SDK version to use.
-  MINVERTAGPREFIX: ${{ vars.MINVERTAGPREFIX || "v" }} # The MinVer tag prefix.
-  MINVERDEFAULTPRERELEASEIDENTIFIERS: ${{ vars.MINVERDEFAULTPRERELEASEIDENTIFIERS || "preview.0" }} # The MinVer default pre-release identifiers.
-  VERBOSE: ${{ vars.VERBOSE || "false" }} # Set to "true" to enable verbose logging in scripts.
+  PREPROCESSOR_SYMBOLS: '' # Semicolon-separated preprocessor symbols to pass to the compiler.
+  NUGET_SERVER: ${{ vars.NUGET_SERVER || 'github' }} # Ensure the NUGET_API_*KEY secrets corresponds to the server selected here.
+  CONFIGURATION: ${{ vars.CONFIGURATION || 'Release' }} # The build configuration: Debug, Release, etc.
+  DOTNET_VERSION: ${{ vars.DOTNET_VERSION || '10.0.x' }} # The .NET SDK version to use.
+  MINVERTAGPREFIX: ${{ vars.MINVERTAGPREFIX || 'v' }} # The MinVer tag prefix.
+  MINVERDEFAULTPRERELEASEIDENTIFIERS: ${{ vars.MINVERDEFAULTPRERELEASEIDENTIFIERS || 'preview.0' }} # The MinVer default pre-release identifiers.
+  VERBOSE: ${{ vars.VERBOSE || 'false' }} # Set to "true" to enable verbose logging in scripts.
 
 jobs:
   get-params:
