--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -22,16 +22,14 @@
         <PackageVersion Include="MinVer" Version="7.0.0" />
 
         <!-- The test stack: -->
-        <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
         <PackageVersion Include="Microsoft.Testing.Extensions.CodeCoverage" Version="18.1.0" />
         <PackageVersion Include="Microsoft.Testing.Platform" Version="2.0.2" />
         <PackageVersion Include="Microsoft.Testing.Extensions.TrxReport" Version="2.0.2" />
         <PackageVersion Include="Microsoft.Testing.Extensions.TrxReport.Abstractions" Version="2.0.2" />
         <PackageVersion Include="FluentAssertions" Version="8.8.0" />
-        <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.5" />
-        <PackageVersion Include="xunit.v3.mtp-v1" Version="3.2.2" />
-        <PackageVersion Include="xunit.v3.mtp-v2" Version="3.2.2" />
+        <PackageVersion Include="xunit.v3" Version="3.2.2" />
         <PackageVersion Include="xunit.v3.extensibility.core" Version="3.2.2" />
+        <PackageVersion Include="xunit.v3.runner.inproc" Version="3.2.2" />
         <PackageVersion Include="vm2.TestUtilities" Version="1.0.3" />
 
         <!-- Benchmarking packages: -->
