chore: update xUnit package references to use MTP v2 and add new telemetry dependencies

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -129,7 +129,7 @@
         <!-- Use MTP v2 for all environments - VS 2022 should support it -->
         <PackageReference Include="Microsoft.Testing.Extensions.TrxReport" />
         <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" />
-        <PackageReference Include="xunit.v3" />
+        <PackageReference Include="xunit.v3.mtp-v2" />
         <PackageReference Include="FluentAssertions" />
         <PackageReference Include="vm2.TestUtilities" />
     </ItemGroup>
