chore: update RepoRoot path and enhance version info logging in build process

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -11,7 +11,7 @@
              without overriding the rest of the symbols like DEBUG, TRACE, etc. -->
         <DefineConstants Condition="'preprocessor_symbols' != ''">$(DefineConstants);$(preprocessor_symbols)</DefineConstants>
 
-        <RepoRoot>$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), '.git'))\</RepoRoot>
+        <RepoRoot>$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), 'Directory.Build.props'))</RepoRoot>
     </PropertyGroup>
 
     <!-- ================ Common Settings for All projects ================ -->
@@ -60,6 +60,15 @@
         <EmbedUntrackedSources>true</EmbedUntrackedSources>
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
     </PropertyGroup>
+
+    <!-- Print version info after build for all projects -->
+    <Target Name="PrintVersion" AfterTargets="Build">
+        <Message Importance="high" Text="AssemblyVersion: $(AssemblyVersion)" />
+        <Message Importance="high" Text="FileVersion: $(FileVersion)" />
+        <Message Importance="high" Text="InformationalVersion: $(InformationalVersion)" />
+        <Message Importance="high" Text="PackageVersion: $(PackageVersion)" />
+        <Message Importance="high" Text="Version: $(Version)" />
+    </Target>
 
     <!-- ================ Common Package References for All projects ================ -->
     <ItemGroup>
@@ -113,16 +122,10 @@
         </NoWarn>
         <!-- Enable MTP v.2 For more information on Microsoft Testing Platform support in xUnit.net, visit: https://xunit.net/docs/getting-started/v3/microsoft-testing-platform -->
         <UseMicrosoftTestingPlatform>true</UseMicrosoftTestingPlatform>
+        <UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
 
         <!-- Enable code coverage by default -->
         <EnableCodeCoverage>true</EnableCodeCoverage>
-        <!-- Default output format: cobertura | xml | coverage -->
-        <CodeCoverageOutputFormat>cobertura</CodeCoverageOutputFormat>
-        <!-- Optional: custom settings file -->
-        <RunSettingsFilePath>$(RepoRoot)CodeCoverage.runsettings</RunSettingsFilePath>
-        <TestConfiguration>$(RepoRoot)testconfig.json</TestConfiguration>
-        <ResultsDirectory>$(RepoRoot)TestResults/$(MSBuildProjectName)</ResultsDirectory>
-        <CodeCoverageOutput>$(ResultsDirectory)/coverage.xml</CodeCoverageOutput>
     </PropertyGroup>
 
     <ItemGroup Condition="$(IsTestProject) == 'true'">
@@ -260,15 +263,6 @@
         <IsPackable>false</IsPackable>
         <GenerateDocumentationFile>false</GenerateDocumentationFile>
     </PropertyGroup>
-
-    <!-- Print version info after build for all projects -->
-    <Target Name="PrintVersion" AfterTargets="Build">
-        <Message Importance="high" Text="AssemblyVersion: $(AssemblyVersion)" />
-        <Message Importance="high" Text="FileVersion: $(FileVersion)" />
-        <Message Importance="high" Text="InformationalVersion: $(InformationalVersion)" />
-        <Message Importance="high" Text="PackageVersion: $(PackageVersion)" />
-        <Message Importance="high" Text="Version: $(Version)" />
-    </Target>
 
     <!-- Add project-specific properties and packages here -->
     <ItemGroup>
