chore: update PACKAGE_PROJECTS path in workflow files to use UlidType project

--- a/.github/workflows/Prerelease.yaml
+++ b/.github/workflows/Prerelease.yaml
@@ -23,7 +23,7 @@ on:
 env:
   PACKAGE_PROJECTS: >
     [
-    "src/Ulid/Ulid.csproj"
+    "src/UlidType/UlidType.csproj"
     ]
 
   PREPROCESSOR_SYMBOLS: ""
