--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -118,7 +118,7 @@ jobs:
           }  >> $GITHUB_OUTPUT
 
   call-ci:
-    name: "CI: Build, Test, Benchmarks"
+    name: "Run CI: Build, Test, Benchmarks"
     needs:
       - get-params
     uses: vmelamed/vm2.DevOps/.github/workflows/_ci.yaml@main
